# claux

./: .env.example  .gitignore  CLAUDE.md  CONSISTENCY.md  DEPLOYMENT-CATALYST.md  Makefile  PLAN.md  PROMPTS.md  README.md  docker-compose.yml
backend/: Dockerfile  app-config.json  pyproject.toml  serve.py
backend/app/: config.py  db.py  main.py
backend/app/api/: eval_set.py  llm.py  orchestrator.py  routes.py  run_eval.py
backend/app/tools/: __main__.py  base.py  catalog.py  compliance.py  demo.py  mo.py  network.py  retrieval.py  trends.py
backend/er/: blocking.py  evaluate.py  graph.py  names.py  records.py  resolve.py  run_evaluate.py  run_resolve.py  score_pairs.py  scoring.py
backend/ingest/synth/: __main__.py  db.py  generator.py  karnataka.py  names.py  narratives.py  registry.py
backend/ml/mo/: __main__.py  fingerprint.py
backend/tests/: test_schema.py
backend/tests/api/: test_eval_set.py  test_orchestrator.py  test_routes.py  test_uniai_client.py
backend/tests/er/: test_evaluate.py  test_names.py  test_resolve.py  test_scoring.py
backend/tests/ingest/: test_synth.py
backend/tests/tools/: test_base.py  test_compliance.py  test_mo.py  test_network.py  test_retrieval.py  test_trends.py
db/: Dockerfile
db/init/: 00_extensions.sql  01_ksp_schema.sql  02_derived.sql
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/api/: client.ts  extract.ts  (+2 more)
submission/: KSP_Crime_Intelligence_Submission.pptx  README.md  build_deck.py
(+36 files in other folders)
